Fix horizontal scroll

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -57,7 +57,6 @@ header {
   right: 10px;
 }
 nav {
-  margin: 0 -20px;
   background: $habitat_blue;
 
   ul {
